# code-assistant

./: .gitignore  README.md
backend/: pyproject.toml  run.bat
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ErrorBoundary.jsx  Skeleton.jsx
