[project]
name = "code-assistant-backend"
version = "1.0.0"
description = "FastAPI backend for AI Code Assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "orjson==3.10.7"
]

[tool.uvicorn]
factory = false
